<resources>
    <string name="app_name">萌妹纸</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_message">哎呀,加载失败了,请检查下网络或者下拉重新刷新下~</string>
    <string name="image_error">图片加载失败啦~</string>
    <string name="action_about">关于萌妹纸</string>
    <string name="back_message">再按一次退出萌妹纸~</string>
    <string name="gank_meizi">首页</string>
    <string name="meizitu">妹纸图</string>
    <string name="tao_female">淘女郎</string>
    <string name="douban_meizi">豆瓣妹纸</string>
    <string name="huaban_meizi">花瓣妹纸</string>
    <string name="jiandan_meizi">煎蛋妹纸</string>
    <string name="action_notifiable">每天中午提醒</string>
    <string name="notifiable_on">已经开启提醒</string>
    <string name="notifiable_off">已经关闭提醒</string>
    <string name="headsup_title">萌妹</string>
    <string name="headsup_content">今天的妹纸已经准备好了，快来享用吧~</string>
    <string name="image_icon_dec">app icon</string>
    <string name="about_introduce">「萌妹纸」- 每日更新妹纸福利\n\n使用Rxjava系列类库 + Realm数据库 + Retrofit2实现的一个妹纸福利App,喜欢的请star一波!</string>
    <string name="about_developers">关于我</string>
    <string name="about_open_source_lis">开源项目</string>
    <string name="about_introduce_and_help">介绍与帮助</string>
    <string name="about_open_source_libraries_list">com.squareup.retrofit2:retrofit:2.0.0-beta4\ncom.squareup.okhttp3:okhttp:3.2.0\nio.reactivex:rxandroid:1.1.0\nio.reactivex:rxjava:1.1.0\ncom.jakewharton:butterknife:7.0.1\ncom.github.bumptech.glide:glide:3.7.0\ncom.trello:rxlifecycle-components:0.6.1\ncom.jakewharton.rxbinding:rxbinding:0.3.0\ncom.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar</string>
    <string name="about_function">功能介绍</string>
    <string name="about_function_list">1.Gank妹纸\n2.淘女郎\n3.豆瓣妹纸\n4.花瓣妹纸\n5.煎蛋妹纸\n6.每日更新提醒\n7.新增妹纸图\n8.妹纸图片保存与分享</string>
    <string name="about">关于</string>
    <string name="about_version">1.0</string>
    <string name="project_link">https://github.com/HotBitmapGG/MoeQuest</string>
</resources>
